<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?attr/colorPrimary"
                app:title="@string/result"
                app:titleTextColor="?attr/colorOnPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/result"
            android:background="@color/md_theme_light_secondaryContainer"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:srcCompat="@drawable/ic_place_holder" />

        <ImageButton
            android:id="@+id/btn_savemark"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:src="@drawable/ic_bookmark_border_orange"
            android:contentDescription="@string/savemark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_image" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_image" />

        <TextView
            android:id="@+id/desc_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/result_desc"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/result_text"
            app:layout_constraintTop_toBottomOf="@+id/result_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>